# ollama-rest-rs

./: Cargo.toml  LICENSE  README.md
examples/: copy-model.rs  delete-model.rs  generate-embeddings.rs  generate.rs  generate_streamed.rs  interactive-chat.rs  interactive-chat_streamed.rs  interactive-multishot.rs  list-local-models-json.rs  list-running-models.rs  one-time-chat.rs  pull-model.rs  pull-model_streamed.rs  push-model.rs  streaming-api.rs  streaming-relay.rs
src/: errors.rs  lib.rs  models.rs  prelude.rs
src/models/: chat.rs  create.rs  embeddings.rs  errors.rs  generate.rs  json_schema.rs  model.rs  version.rs
