[package]
name = "ollama-rest"
version = "0.1.0"
edition = "2021"
description = "Rust bindings of Ollama RESTful API"
authors = ["Charles Dong <chardon_cs@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/chardoncs/ollama-rest-rs.git"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net"] }
