[package]
name = "ollama-rest"
version = "0.1.0"
edition = "2021"
description = "Asynchronous Rust bindings of Ollama REST API"
authors = ["Charles Dong <chardon_cs@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/chardoncs/ollama-rest-rs.git"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs"] }
url = { version = "2.5" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[features]
default = []
