[package]
name = "ollama-rest"
version = "0.1.0-dev2"
edition = "2021"
description = "Asynchronous Rust bindings of Ollama REST API"
authors = ["Charles Dong <chardon_cs@proton.me>"]
license = "MIT"
repository = "https://github.com/chardoncs/ollama-rest-rs.git"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs"] }
url = { version = "2.5" }

[dev-dependencies]
axum = { version = "0.7", features = ["tokio"] }
lazy_static = "1.5"
tokio = { version = "1", features = ["rt", "macros", "net", "rt-multi-thread"] }

[features]
default = []
